feat: first level pages

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,1 +1,18 @@
-Search: Search
+# breadcrumbs.html
+Home: "Home"
+
+# menu.html
+Search: "Search"
+
+# content-footer.html
+Get CUE support and training from Hofstadter: "Get CUE support and training from Hofstadter"
+
+# mailchimp.html
+Subscribe: "Subscribe"
+We'll never share your email with anyone else.: "We'll never share your email with anyone else."
+
+# page-meta-links.html
+Published: "Published"
+Create project issue: "Create project issue"
+Create page issue: "Create page issue"
+Edit this page: "Edit this page"
