--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -1,1 +1,18 @@
-Search: 搜索
+# breadcrumbs.html
+Home: "首页"
+
+# menu.html
+Search: "搜索"
+
+# content-footer.html
+Get CUE support and training from Hofstadter: "Hofstadter CUE 支持和培训"
+
+# mailchimp.html
+Subscribe: "订阅"
+We'll never share your email with anyone else.: "我们绝不会将你的邮箱分享给任何人。"
+
+# page-meta-links.html
+Published: "发布时间:"
+Create project issue: "创建项目 issue"
+Create page issue: "创建页面 issue"
+Edit this page: "编辑本页"
